--- a/.github/workflows/linux-test.yml
+++ b/.github/workflows/linux-test.yml
@@ -12,7 +12,10 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: ["1.21", "1.22", "1.23", "1.24"]
+        go-version: 
+          - "1.23"
+          - "1.24"
+          - "1.25"
     runs-on: ubuntu-latest
 
     steps:
