--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -12,7 +12,8 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: ["1.24"]
+        go-version:
+          - "1.25"
     runs-on: ubuntu-latest
 
     steps:
